--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ngrx/store": "^16.3.0",
     "@reduxjs/toolkit": "^1.9.7",
     "@types/jest": "^29.5.10",
+    "http-server": "^14.1.1",
     "jest": "^29.7.0",
     "jest-preset-angular": "^13.1.4",
     "rxjs": "~7.8.0",
